--- a/css/style.css
+++ b/css/style.css
@@ -86,14 +86,16 @@ textarea {
    ========================================================================== */
 
 .grid-item {
-	width: 400px;
+	width: 40%;
 	margin: 20px;
+	display: flex;
 }
 .grid-item--width2 {
 	width: 400px;
 }
 
 .grid {
+	display: flex;
 	max-width: 60vw;
 	margin: auto;
 }
@@ -158,16 +160,12 @@ textarea {
 }
 
 
-
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
-
 /*
  * Hide visually and from screen readers
  */
-
 .hidden,
 [hidden] {
   display: none !important;
@@ -258,15 +256,12 @@ textarea {
 		margin: 0 !important;
 	}
 }
-
 @media only screen and (min-width: 768px) and (max-width: 1000px) {
 	/* CSS rules for medium-sized screens */
 	.grid {
 		max-width: 90vw;
 	}
 }
-
-
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
